--- a/lib/angular2/shared/services/core/base.ejs
+++ b/lib/angular2/shared/services/core/base.ejs
@@ -135,7 +135,7 @@ TODO Fix Merge Conflict */
       });
       return this.http.request(request)
         .filter(event => event instanceof HttpResponse)
-        .map((res: HttpResponse<any>) => res.body)
+        .map((res: HttpResponse<{}>) => res.body)
         .catch((e) => this.errorHandler.handleError(e));
     }
   }
