--- a/lib/angular2/shared/services/core/error.ejs
+++ b/lib/angular2/shared/services/core/error.ejs
@@ -1,9 +1,8 @@
 /* tslint:disable */
 import { Injectable } from '@angular/core';
 import { HttpErrorResponse } from '@angular/common/http';
-import { Observable } from 'rxjs/Observable';
-//import { ErrorObservable } from 'rxjs/observable/ErrorObservable';
-import 'rxjs/add/observable/throw';
+import { Observable } from 'rxjs/Rx';
+
 /**
  * Default error handler
  */
