--- a/lib/templates/shared/services/core/error.ejs
+++ b/lib/templates/shared/services/core/error.ejs
@@ -3,9 +3,7 @@
 import { Injectable } from '@angular/core';
 import { Response } from '@angular/http';
 <% } %>
-import { Observable } from 'rxjs/Observable';
-//import { ErrorObservable } from 'rxjs/observable/ErrorObservable';
-import 'rxjs/add/observable/throw';
+import { Observable } from 'rxjs/Rx';
 /**
  * Default error handler
  */
@@ -29,9 +27,8 @@ export class ErrorHandler {
 import { Injectable } from '@angular/core';
 import { Response } from '@angular/http';
 <% } %>
-import { Observable } from 'rxjs/Observable';
-//import { ErrorObservable } from 'rxjs/observable/ErrorObservable';
-import 'rxjs/add/observable/throw';
+import { Observable } from 'rxjs/Rx';
+
 /**
  * Default error handler
  */
