change Authorization header to X-Access-Token

--- a/lib/templates/shared/services/core/error.ejs
+++ b/lib/templates/shared/services/core/error.ejs
@@ -3,7 +3,7 @@
 import { Injectable } from '@angular/core';
 import { Response } from '@angular/http';
 <% } %>
-import { Observable } from 'rxjs/Rx';
+import { Observable, throwError } from 'rxjs';
 /**
  * Default error handler
  */
@@ -11,14 +11,11 @@ import { Observable } from 'rxjs/Rx';
 @Injectable()
 <% } %>
 export class ErrorHandler {
-  // ErrorObservable when rxjs version < rc.5
-  // ErrorObservable<string> when rxjs version = rc.5
-  // I'm leaving any for now to avoid breaking apps using both versions
-  public handleError(error: Response): any {
+  public handleError(error: Response): Observable<never> {
 <% if (framework === 'react') { -%>
-    return Observable.throw(error.response.data.error || 'Server error');
+    return throwError(error.response.data.error || 'Server error');
 <% } else { -%>
-    return Observable.throw(error.json().error || 'Server error');
+    return throwError(error.json().error || 'Server error');
 <% } %>
   }
 }
@@ -27,8 +24,7 @@ export class ErrorHandler {
 import { Injectable } from '@angular/core';
 import { Response } from '@angular/http';
 <% } %>
-import { Observable } from 'rxjs/Rx';
-
+import { Observable, throwError } from 'rxjs';
 /**
  * Default error handler
  */
@@ -36,14 +32,11 @@ import { Observable } from 'rxjs/Rx';
 @Injectable()
 <% } %>
 export class ErrorHandler {
-  // ErrorObservable when rxjs version < rc.5
-  // ErrorObservable<string> when rxjs version = rc.5
-  // I'm leaving any for now to avoid breaking apps using both versions
-  handleError(error) {
+  handleError(error): Observable<never> {
 <% if (framework === 'react') { -%>
-    return Observable.throw(error.response.data.error || 'Server error');
+    return throwError(error.response.data.error || 'Server error');
 <% } else { -%>
-    return Observable.throw(error.json().error || 'Server error');
+    return throwError(error.json().error || 'Server error');
 <% } %>
   }
 }
