--- a/lib/angular2/shared/services/core/error.ejs
+++ b/lib/angular2/shared/services/core/error.ejs
@@ -1,17 +1,13 @@
 /* tslint:disable */
 import { Injectable } from '@angular/core';
 import { HttpErrorResponse } from '@angular/common/http';
-import { Observable } from 'rxjs/Rx';
-
+import { Observable, throwError } from 'rxjs';
 /**
  * Default error handler
  */
 @Injectable()
 export class ErrorHandler {
-  // ErrorObservable when rxjs version < rc.5
-  // ErrorObservable<string> when rxjs version = rc.5
-  // I'm leaving any for now to avoid breaking apps using both versions
-  public handleError(errorResponse: HttpErrorResponse): any {
-    return Observable.throw(errorResponse.error.error || 'Server error');
+  public handleError(errorResponse: HttpErrorResponse): Observable<never> {
+    return throwError(errorResponse.error.error || 'Server error');
   }
 }
