--- a/lib/templates/shared/services/core/base.ejs
+++ b/lib/templates/shared/services/core/base.ejs
@@ -4,7 +4,7 @@
 declare var EventSource: any;
 <% if (framework === 'react') { %>
 import axios from 'axios';
-import 'rxjs/add/observable/fromPromise';
+import { from } from 'rxjs';
 <% } %>
 /**
 * @module BaseLoopBackApi
@@ -174,7 +174,7 @@ let headers = {
           data    : body ? JSON.stringify(body) : undefined
         }
       );
-      return Observable.fromPromise(request)
+      return from(request)
         .map((res) => res.data)
         .catch((e) => errorHandler.handleError(e));
 <% } %>
@@ -194,12 +194,12 @@ let headers = {
     if (this.auth.getAccessTokenId()) {
 <% if ( framework === 'angular') { -%>
       headers.append(
-        'Authorization',
+        'X-Access-Token',
         LoopBackConfig.getAuthPrefix() + this.auth.getAccessTokenId()
       );
 <% } %>
 <% if ( framework === 'react') { -%>
-      headers.Authorization = LoopBackConfig.getAuthPrefix() + this.auth.getAccessTokenId();
+      headers['X-Access-Token'] = LoopBackConfig.getAuthPrefix() + this.auth.getAccessTokenId();
 <% } %>
     }
   }
@@ -683,7 +683,7 @@ let headers = {
 <%- buildBaseServiceImports(isIo)  %>
 <% if (framework === 'react') { %>
 import axios from 'axios';
-import 'rxjs/add/observable/fromPromise';
+import { from } from 'rxjs';
 <% } %>
 /**
 * @module BaseLoopBackApi
@@ -845,7 +845,7 @@ let headers = {
           data    : body ? JSON.stringify(body) : undefined
         }
       );
-      return Observable.fromPromise(request)
+      return from(request)
         .map((res) => res.data)
         .catch((e) => errorHandler.handleError(e));
 <% } %>
@@ -865,12 +865,12 @@ let headers = {
     if (this.auth.getAccessTokenId()) {
 <% if ( framework === 'angular') { -%>
       headers.append(
-        'Authorization',
+        'X-Access-Token',
         LoopBackConfig.getAuthPrefix() + this.auth.getAccessTokenId()
       );
 <% } %>
 <% if ( framework === 'react') { -%>
-      headers.Authorization = LoopBackConfig.getAuthPrefix() + this.auth.getAccessTokenId();
+      headers['X-Access-Token'] = LoopBackConfig.getAuthPrefix() + this.auth.getAccessTokenId();
 <% } %>
     }
   }
